style.css
/* Overall. */

html, body {
  font-family: 'Palatino', sans-serif;
  margin: 0;
  padding: 0;
}

body {
  margin: 50px 40px;
}

img {
  animation: fade .5s ease-in-out;
}

@keyframes fade {
  0% {
    opacity: 0
  }
  100% {
    opacity: 1
  }
}

.hidden {
  display: none;
}

/* Header. */

h1 {
  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
  margin-bottom: 0;
  font-size: 24px;
  margin-top: 0px;
}

.top {
  font-size: 12px;
  display: flex;
  opacity: 1;
}

.top img {
  width: 100px;
  margin-right: 40px;
  margin-bottom: 40px;
  animation: none;
}

.top ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.top li {
  margin-top: 10px;
}

.top .intermediate {
  font-style: italic;
}

/* Home page. */

body.home {
  overflow-y: scroll;
}

.columns {
  -webkit-column-count: 1;
  -webkit-column-gap: 40px;
  -webkit-column-fill: auto;
  -moz-column-count: 1;
  -moz-column-gap: 40px;
  -moz-column-fill: auto;
  column-count: 1;
  column-gap: 40px;
  column-fill: auto;
}

.pin {
  display: inline-block;
  -webkit-column-break-inside: avoid;
  -moz-column-break-inside: avoid;
  column-break-inside: avoid;
  margin: 0 2px 40px;
}

.pin img {
  width: 100%;
  max-width: 350px;
}

.pin img:hover {
  opacity: .8;
}


@media (min-width: 540px) {
  h1 {
    margin-top: 16px;
    font-size: 36px;
  }
  .top {
    font-size: 16px;
  }
  .columns {
    -webkit-column-count: 2;
    -moz-column-count: 2;
    column-count: 2;
  }
}

@media (min-width: 860px) {
  .columns {
    -webkit-column-count: 3;
    -moz-column-count: 3;
    column-count: 3;
  }
}

@media (min-width: 1200px) {
  body {
    max-width: 1000px;
    margin: 40px auto;
  }
}

/* Project page. */

.project .top {
  opacity: .5;
}

.project main {
  display: flex;
  flex-direction: column;
}

.project .desc {
  padding-bottom: 40px;
}

.project img {
  max-width: 100%;
  display: block;
  margin-bottom: 40px;
}

@media (min-width: 860px) {
  .project main {
    display: flex;
    flex-direction: row;
  }
  .project img {
    max-width: 500px;
    max-height: 400px;
  }
  .project .desc {
    width: 300px;
    flex-shrink: 0;
    padding-right: 40px;
    padding-bottom: 0;
  }
}

